infrastructure/staging/configs/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
spec:
  controllerName: io.cilium/gateway-controller
