infrastructure/staging/configs/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  addresses:
  - type: IPAddress
    value: 192.168.178.210
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.arpa"
      tls:
        certificateRefs:
          - name: ca
            namespace: cert-manager
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
